# shell-scripts

./: .clang-format  .gitattributes  .gitignore  4chan-dl  4chan-dl.py  8chan-dl  README.md  anime-rss  backup-chromium  backup-meta  backup-meta.py  backup-quickpkg  backup-user-local  backup-vnstat  chandl  chandl-batch  checksum  chromium-default  chromium-default.py  chromium-ex2  clang-format.sh  clock-skew  colors.sh  conf.sh  count-archive  count-filesize  count-image  current-ip  digest-ebuild  drive-temps  extract  extract-cbz-dir  extract-iso-dir  extract.py  ffmpeg-remove-track  ffmpeg-trim  gentoo-check-portage  gentoo-chroot  gentoo-ebuild-diff  gentoo-ebuild-local  (+102 more)
cxx/: chromium-default.cxx  clang-format.sh  clean-downloads.cxx  count-filesize.cxx  count-image.cxx  digest-ebuild.cxx  extract.cxx  image-convert.cxx  kernel-install-src.cxx  meson.build  snip.cxx  vulnerabilities.cxx
cxx/commandline/: commandline.cxx  commandline.hxx
cxx/lib/: colors.hxx  commandline.cxx  commandline.hxx  confirm.cxx  confirm.hxx  env.cxx  env.hxx  error.cxx  error.hxx  execute.cxx  execute.hxx  file-ops.hxx  hash.cxx  mouse.cxx  mouse.hxx  proc.cxx  proc.hxx  recursion.cxx  recursion.hxx  single-instance.cxx  single-instance.hxx  user-dirs.cxx  user-dirs.hxx  write.hxx
cxx/logger/: logger.cxx  logger.hxx
cxx/src/: clean-downloads.cxx
cxx/src/lib/: commandline.hxx  confirm.cxx  env.cxx  env.hxx  hash.cxx  hash.hxx  recursion.cxx  recursion.hxx  user-dirs.cxx
cxx/utils/: colors.hxx  confirm.cxx  confirm.hxx  single-instance.cxx  single-instance.hxx
cxx/vfs/: env.cxx  env.hxx  execute.cxx  file-ops.hxx  hash.cxx  hash.hxx  mouse.cxx  mouse.hxx  proc.cxx  proc.hxx  recursion.cxx  recursion.hxx  tools.cxx  tools.hxx  user-dirs.cxx  user-dirs.hxx
deprecated/python/: anime_rss.py  backup_meta.py  backup_quickpkg.py  chromium_default.py  extract.py  image_convert.py  image_convert_jxl.py  kernel_initramfs.py  kernel_install_src.py  kernel_microcode_gen.py  lxd_admin.py  lxd_image.py  lxd_setup.py  scripts-compile.py  snip.py  sort_image_type.py  vscode.py  vulnerabilities.py  ytdl.py
deprecated/python/template/: config_lxd.py
deprecated/python/utils/: editor.py  lxd.py
deprecated/shell/: 4chan-dl.sh  anime-rss.sh  backup-meta.sh  backup-quickpkg.sh  checksum.sh  chromium-default.sh  colors.sh  count-filesize.sh  count-image.sh  digest-ebuild.sh  extract-cbz-dir.sh  extract-iso-dir.sh  extract.sh  ffmpeg-remove-track.sh  ffmpeg-trim.sh  gentoo-check-portage.sh  gentoo-chroot.sh  gentoo-emerge-resume.sh  grub2-install-efi-fucked.sh  image-convert.sh  kernel-build.sh  kernel-clean-src.sh  kernel-grub.sh  kernel-initramfs-genkernel.sh  kernel-install-src.sh  kernel-microcode-gen.sh  lxd-admin.sh  lxd-setup.sh  madokami-manga.sh  manga-process.sh  mime-correct.sh  mk7z.sh  mkadvzip.sh  mkgpg.sh  mkv-extract.sh  mkv-from-any.sh  mkxz.sh  mkzip.sh  mountiso.sh  mpv-link.sh  (+18 more)
docker/: flexget.sh  rtorrent.sh
python/: 4chan-dl.py  anime_rss.py  backup-meta.py  backup-quickpkg.py  backup-vnstat.py  backup_meta.py  backup_quickpkg.py  backup_vnstat.py  chandl.py  chandl_batch.py  chromium-default.py  chromium_default.py  count-image.py  count_filesize.py  count_image.py  digest-ebuild.py  digest_ebuild.py  docker_torrent_admin.py  extract.py  gentoo-emerge-resume.py  gentoo-rebuild-world.py  gentoo_emerge_resume.py  gentoo_rebuild_world.py  grub2-install-efi-fucked.py  grub2_install_efi_fucked.py  image-convert.py  image_convert.py  image_convert_jxl.py  kernel-build.py  kernel-clean-src.py  kernel-initramfs.py  kernel-microcode-gen.py  kernel_build.py  kernel_clean_src.py  kernel_grub.py  kernel_initramfs.py  kernel_install_src.py  kernel_microcode_gen.py  lxd-admin.py  lxd-image.py  (+52 more)
python/template/: chrome_symlinks.py  config_docker_rutorrent.py  config_lxd.py  mado_pass.py  manga_list.py  sort_list.py  thread_list.py
python/utils/: archive_utils.py  check_env.py  clipboard.py  colors.py  confirm.py  dirs.py  execute.py  file_size.py  gentoo.py  get_files.py  hash.py  hash_compare.py  kernel.py  lxd.py  mimecheck.py  natural_sort.py  net.py  output_dir.py  recursion.py  repo.py  root_check.py  script.py  template_config_lxd.py  utils.py
shell/: 4chan-dl  anime-rss  backup-meta  backup-quickpkg  chromium-default  colors.sh  current-ip.sh  drive-temps.sh  ffmpeg-remove-track  ffmpeg-trim  gentoo-check-portage  gentoo-ebuild-diff.sh  gentoo-ebuild-local.sh  gentoo-emerge-resume  gentoo-ldd-deps.sh  gentoo-repos-git-gc.sh  image-convert  kernel-build  kernel-clean-src  kernel-grub  kernel-initramfs-genkernel  kernel-install-src  lxd-admin  lxd-setup  madokami-manga  manga-process  mime-correct  mk7z  mkadvzip  mkgpg  mkv-extract  mkv-from-any  mkxz  mkzip  mountiso  mpv-link  optimize-all  opus-from-any  pip-updates  remove-manga-credits.sh  (+19 more)
tools/: scripts-compile.py  symlink-bin.py  symlink-python.py  symlink-shell.py  utils
utils/: colors.py  confirm.py  dirs.py  editor.py  hash.py  kernel.py  lxd.py  mimecheck.py  natural_sort.py  net.py  utils.py
